# nanogpt

./: .gitignore  README.md  a.py  bigram.py  cached_fineweb10b.py  jax_origianl.py  pyproject.toml  requirements.txt  startup.sh  temp.py  test.ipynb  test2_jax.py  test3_jax.py  test4_jax.py  train_gpt2.py  v2.py
logs/: 814dc1f7-77f5-4639-9a2c-6c37fa176955.txt
wandb/: latest-run
wandb/run-20260220_125038-40akz7jz/: run-40akz7jz.wandb
wandb/run-20260220_125038-40akz7jz/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260220_125619-uf4m7kg0/: run-uf4m7kg0.wandb
wandb/run-20260220_125619-uf4m7kg0/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260220_145624-w56660bt/: run-w56660bt.wandb
wandb/run-20260220_145624-w56660bt/files/: config.yaml  wandb-metadata.json  wandb-summary.json
