[project]
name = "nanogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.2",
    "ipykernel>=7.1.0",
    "jax[tpu]>=0.6.2",
    "optax>=0.2.6",
    "setuptools>=82.0.0",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "wandb>=0.25.0",
]
